# Questions

./: .dockerignore  .gitignore  Makefile  README.md  go.mod  go.work  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: go-build.yml  go-mod-tidy.yml  go.yml  quft-verify.yml  rust.yml
Darwins-Gate/: .gitignore  README.md  go.mod  go.sum  go.work  go.work.sum  makefile.txt
Darwins-Gate/.qwen/: settings.json
Darwins-Gate/bpf/: README.md
Darwins-Gate/proto/: buf.gen.yaml  ric.kernel_descriptor.b64.v1.json  ric.kernel_descriptor.b64.v1.proto.txt  ric.kernel_descriptor.b64.v2.proto.txt  (+1 more)
Darwins-Gate/stateviz/crates/engine_wasm/: Cargo.toml
Darwins-Gate/stateviz/crates/gfx_wgpu/: Cargo.toml
Darwins-Gate/stateviz/stateviz/: ADDED_WGPU_WASM.md  Cargo.toml  README.md
Darwins-Gate/stateviz/stateviz/apps/inspector_native/: Cargo.toml
Darwins-Gate/stateviz/stateviz/apps/inspector_native/src/: main.rs
Darwins-Gate/stateviz/stateviz/apps/inspector_native/src/panels/: manifold_panel.rs
Darwins-Gate/stateviz/stateviz/apps/visualizer_web/src/: main.ts
Darwins-Gate/stateviz/stateviz/crates/engine_wasm/src/: lib.rs
Darwins-Gate/stateviz/stateviz/crates/gfx_wgpu/src/: lib.rs
Darwins-Gate/stateviz/stateviz/crates/gravity14_core/: Cargo.toml
Darwins-Gate/stateviz/stateviz/crates/gravity14_core/src/: gravity14_wgpu.rs  lib.rs  pullback.rs  types.rs
Darwins-Gate/stateviz/stateviz/crates/manifold/: Cargo.toml
Darwins-Gate/stateviz/stateviz/crates/manifold/src/: env_plugin.rs  manifold.rs  router.rs
Darwins-Gate/stateviz/stateviz/crates/plugins/gravity14_plugin/src/: lib.rs
Darwins-Gate/stateviz/stateviz/crates/plugins/redshift_plugin/src/: lib.rs
Darwins-Gate/stateviz/stateviz/crates/scene/src/layers/: chaosbf_gauges.rs  chaosbf_glyphs.rs  mod.rs  phase_atlas.rs  redshift_residuals.rs  slicer3d.rs
Darwins-Gate/stateviz/stateviz/schemas/: manifold_registry.schema.json
JAX'D/: .gitignore
(+212 files in other folders)
