[package]
name = "stateviz-engine-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
stateviz-gfx-wgpu = { path = "../gfx_wgpu" }
stateviz-gravity14-core = { path = "../gravity14_core" }
wgpu = "0.19"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Document", "Window"] }
js-sys = "0.3"
anyhow = "1"
